--- a/_extensions/quarto-quiz-teachr/_extension.yml
+++ b/_extensions/quarto-quiz-teachr/_extension.yml
@@ -1,8 +1,8 @@
-title: quarto-forms-teachr
+title: quarto-quiz-teachr
 author: mitchelloharawild
 version: 1.0.0
 quarto-required: ">=1.4.0"
 contributes:
   filters:
-    - quarto-forms-teachr.lua
+    - quarto-quiz-teachr.lua
 
